Navigation and header changes

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 	<!-- container -->
 	<div class="container">
 
-		<header class="row">
+		<header class="row main-header">
 			<hgroup class="five columns">
 				<h1>Bob Martens</h1>
 				<h2>Everything for no one.</h2>
 			</hgroup>
 			
-			<nav class="seven columns">
+			<nav class="seven columns main-nav">
 				<ul>
 					<li>About Me</li>
-					<li>Setup</li>
-					<li>Talks</li>
-					<li>Code</li>
+					<li>My Setup</li>
+					<li>My Talks</li>
+					<li>My Code</li>
 					<li>Contact Me</li>
 				</ul>
 			</nav>
