Background and font changes

--- a/index.html
+++ b/index.html
@@ -49,21 +49,19 @@
 		<header class="row main-header">
 			<hgroup class="five columns">
 				<h1>Bob Martens</h1>
-				<h2>Everything for no one.</h2>
 			</hgroup>
 			
 			<nav class="seven columns main-nav">
 				<ul>
-					<li>About Me</li>
-					<li>My Setup</li>
-					<li>My Talks</li>
-					<li>My Code</li>
-					<li>Contact Me</li>
+					<li><a href="/about">About</a></li>
+					<li><a href="/talks">Talks</li>
+					<li><a href="/code">Code</li>
+					<li><a class="active" href="/contact">Contact</li>
 				</ul>
 			</nav>
 		</header>
 
-		<section class="row">
+		<section class="content" class="row">
 			<article class="link-article">
 				<header>
 					<h1><a class="link-title" href="http://masseffect.com">Mass Effect 3</a> - <a href="http://bobmartens.net/permalink">{~}</a></h1>
