more graphical updates

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 		<header class="row main-header">
 			<hgroup class="five columns">
-				<h1>Bob Martens</h1>
+				<h1><a href="/">Bob Martens</a></h1>
 			</hgroup>
 			
 			<nav class="seven columns main-nav">
